--- a/style.css
+++ b/style.css
@@ -359,5 +359,51 @@ input:focus{
 
 /* Estilizando o rodape */
 footer{
+    padding: 60px 0px;
     background-color: #1F1F1F;
 }
+
+footer .container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+.redes-sociais{
+    display: flex;
+}
+
+.rede-social-icon{
+    margin-right: 10px;
+    padding: 5px;
+    border-radius: 4px;
+    background-color: #343238;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.vivadecor{
+    width: 400px;
+
+    gap: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.vivadecor > img {
+    width: 200px;
+    filter: invert(100%);
+  }
+
+  .links-rodape{
+    list-style-type: none;
+  }
+
+  .rodape-coluna, .rodape-coluna ul{
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
