--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ button{
     cursor: pointer; /* Mudar o icone de ação do mouse */
     font-size: 18px;
     font-weight: 500;
-    padding: 10px 30px;
+    padding: 15px 50px;
 
     border: none;
     color: white;
@@ -108,7 +108,7 @@ main{
 
 .button-principal{
     font-size: 22px;
-    padding: 25px 70px;
+    padding: 30px 90px;
 }
 
 .apresentacao-numeros-marca{
@@ -285,6 +285,10 @@ main{
     gap: 40px;
     display: flex;
     justify-content: space-between;
+
+    border-radius: 5px;
+    padding: 30px 0px 0px 30px;
+    background-color: white;
 }
 
 .conteudo-secao-clientes{
@@ -313,6 +317,18 @@ main{
 
     align-items: flex-end;
     flex-direction: column;
+
+    position: relative;
+}
+
+.nossos-clientes > img{
+    border-radius: 3px;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+
+    width: 45%;
+    z-index: -1;
 }
 
 .nome-cliente h2{
@@ -328,6 +344,8 @@ main{
     align-items: center;
     flex-direction: column;
     justify-content: center;
+
+    position: relative;
 }
 
 /* Pagar todos itens dentro da classe .contato apenas filhos */
@@ -346,8 +364,8 @@ form{
     box-shadow: 0px 2px 20px 5px #ddd;
     background-color: white;
 
-    position: relative;
-    top: 70px;
+    position: absolute;
+    bottom: -90px;
 }
 
 form input{
@@ -363,7 +381,7 @@ input:focus{
 
 /* Estilizando o rodape */
 footer{
-    padding: 60px 0px;
+    padding: 100px 0px 60px;
     background-color: #1F1F1F;
 }
 
@@ -399,16 +417,45 @@ footer .container{
 .vivadecor > img {
     width: 200px;
     filter: invert(100%);
-  }
+}
 
-  .links-rodape{
+.links-rodape{
     list-style-type: none;
-  }
+}
 
-  .rodape-coluna, .rodape-coluna ul{
+.rodape-coluna, .rodape-coluna ul{
     gap: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+}
 
-  }
+/* Ajustando a posição dos itens da primeira seção */
+.position-elementos{
+    position: relative;
+}
+
+.position-elementos > img{
+    margin-right: 80px;
+}
+
+.position-elementos button{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    z-index: 1;
+
+    height: 160px;
+}
+
+.contorno-quadrado{
+    width: 200px;
+    height: 200px;
+    border-radius: 8px;
+    border: 2px solid #1F1F1F;
+
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    z-index: -1;
+}
